<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/profile_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/profile_fragment_title"
            android:textColor="@color/blackTextColor"
            android:textSize="28sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/nameImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/name_image"
                android:src="@drawable/ic_name" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/nameImageView"
                android:ellipsize="end"
                android:layout_toStartOf="@id/edit_name_button"
                android:text="@string/name"
                android:textColor="@color/blackTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTextView"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/nameImageView"
                android:textColor="@color/blackTextColor"
                android:textSize="14sp"
                tools:text="developer" />

            <ImageButton
                android:id="@+id/edit_name_button"
                android:contentDescription="@string/edit_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="#00000000"
                android:src="@drawable/ic_baseline_edit_24" />


        </RelativeLayout>

        <View style="@style/profileDetailsView" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/mobileImageView"
                android:layout_width="40dp"
                android:contentDescription="@string/mobile_image"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_mobile" />

            <TextView
                android:id="@+id/mobileTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/mobileImageView"
                android:layout_toStartOf="@id/edit_phone_button"
                android:ellipsize="end"
                android:text="@string/mobile"
                android:textColor="@color/blackTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mobileTextView"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/mobileImageView"
                android:textColor="@color/blackTextColor"
                android:textSize="14sp"
                tools:text="+91-8129999999" />

            <ImageButton
                android:id="@+id/edit_phone_button"
                android:contentDescription="@string/edit_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="#00000000"
                android:src="@drawable/ic_baseline_edit_24" />

        </RelativeLayout>

        <View style="@style/profileDetailsView" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/emailImageView"
                android:layout_width="40dp"
                android:contentDescription="@string/email_image"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_email" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/emailImageView"
                android:text="@string/email"
                android:textColor="@color/blackTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTextView"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/emailImageView"
                android:textColor="@color/blackTextColor"
                android:textSize="14sp"
                tools:text="achalkaushik@bpitindia.com" />

        </RelativeLayout>

        <View style="@style/profileDetailsView" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/addressImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/designation_image"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_address" />

            <TextView
                android:id="@+id/designationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/addressImageView"
                android:text="@string/designation"
                android:textColor="@color/blackTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/designation_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/designationTextView"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/addressImageView"
                android:textColor="@color/blackTextColor"
                android:textSize="14sp"
                tools:text="HOD and Professor" />

        </RelativeLayout>

        <View style="@style/profileDetailsView" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/dobImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/date_of_joining_image"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_dob" />

            <TextView
                android:id="@+id/dojTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/dobImageView"
                android:text="@string/date_of_joining"
                android:textColor="@color/blackTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/doj_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dojTextView"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/dobImageView"
                android:textColor="@color/blackTextColor"
                android:textSize="14sp"
                tools:text="12-05-1990" />

        </RelativeLayout>


    </LinearLayout>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="128dp"
        android:backgroundTint="#FE4829"
        android:text="@string/log_out" />

</FrameLayout>


